# WinAssoc

./: .gitignore  Cargo.toml  README.md  SPEC.md  build.rs  config.example.toml  test-config.toml
.opencode/plans/: 2026-06-13-binary-size-optimization.md
docs/superpowers/plans/: 2026-06-13-refactoring.md  2026-06-17-settings-fluent-design.md  2026-06-17-settings-screen.md
docs/superpowers/specs/: 2026-06-13-refactoring-design.md  2026-06-17-settings-fluent-design.md  2026-06-17-settings-screen-design.md
src/: commands.rs  config.rs  engine.rs  error.rs  icon.rs  lib.rs  logging.rs  main.rs  picker.rs  platform.rs  registry.rs  ui.slint
src/config/: mod.rs  validate.rs
src/picker/: mod.rs  picker.slint  window.rs
src/registry/: backup.rs  doctor.rs  mod.rs
src/settings/: apps.rs  data.rs  ext.rs  management.rs  mod.rs  protocol.rs  theme.rs  validation.rs
src/ui/: data.slint  icons.slint  settings.slint  theme.slint
src/ui/components/: accent_button.slint  card.slint  checkbox.slint  combo_box.slint  command_bar.slint  condition_chip.slint  info_badge.slint  nav_item.slint  number_box.slint  rule_row.slint  text_field.slint  title_bar.slint  toggle_switch.slint
src/ui/pages/: apps_page.slint  extensions_page.slint  management_page.slint  protocols_page.slint
