[package]
name = "winassoc"
version = "0.1.0"
edition = "2021"
description = "Windows のファイル関連付け/URL をルールベースでルーティングするシム"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
globset = "0.4"
url = "2"
dirs = "5"
chrono = "0.4"
winreg = "0.55"
eframe = "0.32"
raw-window-handle = "0.6"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_Com",
]

[profile.release]
# シムは起動レイテンシ最優先 (SPEC 6)
opt-level = 3
lto = true
strip = true
