[package]
name = "winassoc"
version = "0.1.0"
edition = "2021"
description = "Windows のファイル関連付け/URL をルールベースでルーティングするシム"

[dependencies]
clap = { version = "4" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
globset = "0.4"
dirs = "5"
winreg = "0.55"
slint = "1"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_Com",
]

[build-dependencies]
slint-build = "1"
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1

[profile.release.package.serde_derive]
opt-level = "s"
